# hashp

./: .gitignore  README.md  buildAll.cmd  buildLinux.cmd  copyUebergabe.cmd  go.mod  hashp.go
go/: buildLinuxAMD64.cmd  buildWindowsAMD64.cmd  buildWindowsX86.cmd  copyUebergabeGO1.20.cmd  go.mod  go.sum  hashp.go  main.go  mikeByteSize.go  mikeByteSize_test.go  openreadonly.go  openreadonly_windows.go
rust/: Cargo.toml  build_i686_win7.bat  build_instructions.txt  build_x86_64_win7.bat  build_x86_64_win7_XEON_cascadelake.bat
rust/.cargo/: config.toml
rust/src/: main.rs
