[package]
name = "hashp"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros","rt-multi-thread","fs", "io-util", "time"] }
futures = { version = "0.3" }
crossbeam-channel = "0.5"
sha2 = { version = "0.10", default-features = false }
clap = { version = "4.5.16", features = ["derive"] }

[profile.release]
panic = 'abort'

[profile.minsize]
inherits = "release"
strip = true
opt-level = "z"
panic = 'abort'
lto = true
codegen-units = 1
